# Stock-Python-Flet

./: .gitignore  pyproject.toml
src/: main.py
src/App/: app_header.py  app_layout.py  app_menu.py  app_pages.py  app_table.py  login.py  loginRegister.py  register.py  sidebar.py
src/App/__pycache__/: app_layout.cpython-312.pyc.2253060415792
src/Views/Product/: ListProduct.py
src/Views/Supplier/: ListSupplier.py
src/Views/User/: ListUser.py
